# browser-automation-lab

./: .env.example  .gitignore  README.md  SPEC.md  azure.yaml  pyproject.toml  start.sh
copilot_sdk_agent/: agent.py  run.py  tools.py
infra/: main.bicep  main.bicepparam
infra/modules/: openai.bicep  storage.bicep
langgraph_agent/: compaction.py  graph.py  run.py  state.py  tools.py
shared/: config.py  models.py
web/: dashboard.html  events.py  runners.py  server.py
